# TEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Config/: OpenGL.cmake
Config/OpenGL/: FindASSIMP.cmake  FindGLFW3.cmake  FindGLM.cmake
Config/Windows/: Engine.cmake  Game.cmake
Source/Engine/: Asserts.h  Engine.h  Math.hpp  precomp.h  types.h
Source/Engine/Builders/: ObjImporter.cpp  ObjImporter.h
Source/Engine/Components/: Component.h  Components.h  EntityComponent.h  PhysicsComponent.h  PrimitiveComponent.h  SceneComponent.h
Source/Engine/Components/data/: sky.h
Source/Engine/Core/: Application.cpp  Application.h  EntryPoint.h  Main.cpp  Math.cpp  Math.h
Source/Engine/Core/File/: Manager.cpp  Manager.h
Source/Engine/Core/Logger/: Log.cpp  Log.h
Source/Engine/Entities/: Entity.h  EntityManager.cpp  EntityManager.h
Source/Engine/Input/: InputEvent.h  InputSystem.cpp  InputSystem.h  Keys.h  glKeys.h
Source/Engine/Logger/: Log.cpp  Log.h
Source/Engine/Physics/: PysicsSystem.cpp  PysicsSystem.h
Source/Engine/Render/: RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h
Source/Engine/Render/Camera/: BasicCamera.h  Camera.cpp  Camera.h
Source/Engine/Render/Graphics/: Graphics.cpp  Graphics.h
Source/Engine/Render/Mesh/: Mesh.cpp  Mesh.h
Source/Engine/Render/PostProcessing/: Framebuffer.cpp  Framebuffer.h  fbData.h
Source/Engine/Render/Shader/: Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h
Source/Engine/Render/Texture/: Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
Source/Engine/Render/Vertex/: Buffer.cpp  Buffer.h  VertexArray.cpp  VertexArray.h
Source/Engine/Render/Window/: DebugWindow.cpp  DebugWindow.h  Gui.cpp  Gui.h  Window.cpp  Window.h  WindowData.h
Source/Game/: GameData.h  GameEntities.h
Source/Game/Core/: Game.cpp  Game.h  GameApp.cpp  GameApp.h
Source/Game/Entities/: IEntity.h  Player.cpp  Player.h  PlayerCamera.cpp  PlayerCamera.h  Sky.cpp  Sky.h
Source/Resources/Shaders/: pbr.frag  pbr.vert  skybox.vert  sprite.frag  sprite.vert
